.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:07:58 **** Rebuild of configuration Debug for project TP_4 [TEST] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Passenger.o "..\\Passenger.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Controller.o "..\\Controller.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o input.o "..\\input.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o parser.o "..\\parser.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o LinkedList.o "..\\LinkedList.c" 
gcc -o "TP_4 [TEST].exe" Controller.o LinkedList.o Passenger.o input.o main.o parser.o 
21:09:51 **** Incremental Build of configuration Debug for project TP_4 [TEST] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o "TP_4 [TEST].exe" Controller.o LinkedList.o Passenger.o input.o main.o parser.o 
21:21:59 **** Incremental Build of configuration Debug for project TP_4 [TEST] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Controller.o "..\\Controller.c" 
gcc -o "TP_4 [TEST].exe" Controller.o LinkedList.o Passenger.o input.o main.o parser.o 
Info: Nothing to build for TP_4 [TEST]
Info: Nothing to build for TP_4 [TEST]
21:27:23 **** Incremental Build of configuration Debug for project TP_4 [TEST] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:200:14: error: a label can only be part of a statement and a declaration is not a statement
  200 |              LinkedList* cloneArray;
      |              ^~~~~~~~~~
21:29:00 **** Incremental Build of configuration Debug for project TP_4 [TEST] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Controller.o "..\\Controller.c" 
gcc -o "TP_4 [TEST].exe" Controller.o LinkedList.o Passenger.o input.o main.o parser.o 
21:33:45 **** Incremental Build of configuration Debug for project TP_4 [TEST] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o "TP_4 [TEST].exe" Controller.o LinkedList.o Passenger.o input.o main.o parser.o 
Info: Nothing to build for TP_4 [TEST]
21:35:06 **** Incremental Build of configuration Debug for project TP_4 [TEST] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o "TP_4 [TEST].exe" Controller.o LinkedList.o Passenger.o input.o main.o parser.o 
21:50:43 **** Incremental Build of configuration Debug for project TP_4 [TEST] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o "TP_4 [TEST].exe" Controller.o LinkedList.o Passenger.o input.o main.o parser.o 
21:50:58 **** Incremental Build of configuration Debug for project TP_4 [TEST] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o "TP_4 [TEST].exe" Controller.o LinkedList.o Passenger.o input.o main.o parser.o 
22:32:06 **** Incremental Build of configuration Debug for project TP_4 [TEST] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o "TP_4 [TEST].exe" Controller.o LinkedList.o Passenger.o input.o main.o parser.o 
22:33:04 **** Incremental Build of configuration Debug for project TP_4 [TEST] ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o "TP_4 [TEST].exe" Controller.o LinkedList.o Passenger.o input.o main.o parser.o 
Info: Nothing to build for TP_4 [TEST]
